django blog project day 1

--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -1,18 +1,48 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
     <title>Blog</title>
+    
+    <!-- BootStrap CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    
+    <!-- BootStrap JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    
+    <!-- Medium-Eext Editor CSS, JS -->
+    <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+    
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+    <!-- Google fonts-->
+    <!--font-family: 'Anton', sans-serif;
+    font-family: 'Diplomata SC', cursive;
+    font-family: 'EB Garamond', serif;
+    font-family: 'Rubik Moonrocks', cursive;-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Diplomata+SC&family=EB+Garamond&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-
+    <nav class="navbar navbar-default techfont">
+        <div class="container">
+            <ul class="nav nabar-nav">
+                <li><a class="navbar-brand bigbrand" href="#">MyBlog</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#"></a>GitHub</li>
+                <li><a href="#"></a>LinkdIn</li>
+            </ul>
     </nav>
+    <div class="center">
     {% block content %}
     
     {% endblock %}
+    </div>
 </body>
 </html>
